--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,15 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.7</version>
         </dependency>
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-jdbc</artifactId>
+    <version>2.1.1.RELEASE</version>
+</dependency>
+<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+	</dependency>
        <!--  <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
