--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.mvc.view.prefix: /WEB-INF/jsp/
-spring.mvc.view.suffix: .jsp
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/stockexchange
-spring.datasource.username=root
-spring.datasource.password=root
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=SYSTEM
+spring.datasource.password=password@1
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 logging.level.org.springframework.web=ERROR
 logging.level.com.example=DEBUG
