--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=SYSTEM
 spring.datasource.password=password@1
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 logging.level.org.springframework.web=ERROR
 logging.level.com.example=DEBUG
+server.port=8081
